# rust_100

./: .gitignore  Cargo.toml  README.md  compose.yaml
.cargo/: config.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: Dockerfile
src/01_welcome/01_syntax/: Cargo.toml
src/02_a_basic_calculator/01_integers/: Cargo.toml
src/02_a_basic_calculator/02_variables/: Cargo.toml
src/02_a_basic_calculator/03_branching_if_else/: Cargo.toml
src/02_a_basic_calculator/04_panics/: Cargo.toml
src/02_a_basic_calculator/05_factorial/: Cargo.toml
src/02_a_basic_calculator/06_loops_while/: Cargo.toml
src/02_a_basic_calculator/07_loops_for/: Cargo.toml
src/02_a_basic_calculator/08_overflow_and_under_flow/: Cargo.toml
src/02_a_basic_calculator/09_saturating_arithmetic/: Cargo.toml
src/02_a_basic_calculator/10_conversions_as_casting/: Cargo.toml
src/03_ticket_v1/00_intro/: Cargo.toml
src/03_ticket_v1/01_structs/: Cargo.toml
src/03_ticket_v1/02_validation/: Cargo.toml
src/03_ticket_v1/03_modules/: Cargo.toml
src/03_ticket_v1/04_visibility/: Cargo.toml
src/03_ticket_v1/05_encapsulation/: Cargo.toml
src/03_ticket_v1/06_ownership/: Cargo.toml
src/03_ticket_v1/07_setters/: Cargo.toml
src/03_ticket_v1/08_stack/: Cargo.toml
src/03_ticket_v1/09_heap/: Cargo.toml
src/03_ticket_v1/10_references/: Cargo.toml
src/03_ticket_v1/11_destructors/: Cargo.toml
src/03_ticket_v1/12_outro/: Cargo.toml
src/04_traits/00_intro/: Cargo.toml
src/04_traits/01_traits/: Cargo.toml
src/04_traits/02_orphan_rule/: Cargo.toml
(+33 files in other folders)
