[workspace]
members = [
    "helpers/common",
    "src/01_welcome/*",
    "src/02_a_basic_calculator/*",
    "src/03_ticket_v1/*",
    "src/04_traits/*",
]

resolver = "2"

[workspace.dependencies]
rstest = "0.22.0"
common = { path = "helpers/common" }

[profile.dev]
overflow-checks = false
